--- a/src/App.css
+++ b/src/App.css
@@ -13,10 +13,15 @@ a:hover {
 
 ::placeholder {
     color: #000000 !important;
+    text-transform: capitalize !important;
 }
 
 select, button {
     cursor: pointer;
+}
+
+textarea {
+    font-family: 'Red Hat Text', sans-serif !important;
 }
 
 /* input:focus, select:focus, textarea:focus {
