--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,35 @@
-h1,h2,h3,h4,h5,h6,p,ul,ol {
-    margin: 0;
-    padding: 0;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul,
+ol {
+  margin: 0;
+  padding: 0;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
-  
+
 a:hover {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 ::placeholder {
-    text-transform: capitalize !important;
+  text-transform: capitalize !important;
 }
 
-select, button {
-    cursor: pointer;
+select,
+button {
+  cursor: pointer;
 }
 
 textarea {
-    font-family: 'Red Hat Text', sans-serif !important;
+  font-family: 'Red Hat Text', sans-serif !important;
 }
 
 /* input:focus, select:focus, textarea:focus {
@@ -32,6 +41,23 @@ textarea {
     border: 1px solid var(--postslate-blue-dark) !important;
 } */
 
-button:focus, input:focus, select:focus, textarea:focus {
-    outline: none;
+button:focus,
+input:focus,
+select:focus,
+textarea:focus {
+  outline: none;
+}
+
+.mb {
+  display: none !important;
+}
+
+@media screen and (max-width: 768px) {
+  .lg {
+    display: none !important;
+  }
+
+  .mb {
+    display: block !important;
+  }
 }
