--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
 * {
   box-sizing: border-box;
+  -webkit-touch-callout: none;
+  -webkit-tap-highlight-color: transparent;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
 html {
